--- a/style.css
+++ b/style.css
@@ -11,97 +11,94 @@
     box-shadow: 0px 3px 0px 0px #aaaaaa;
     box-shadow: 0px 3px 0px 0px #CFCFCF;
     font-size: auto;
-    //min-height: 65px;
-  }
-  .profile_text {
+    min-height: 65px;
+}
+
+.profile_text {
     display: block;
     float: left;
     line-height: 26px;
-    //margin-right: 8px;
+    margin-right: 8px;
     font-weight: bold;
     padding-right: 8px;
-  }
-  .profile_type {
+}
+
+.profile_type {
     display: block;
     float: left;
     line-height: 26px;
     margin-right: 10px;
-    //width: 68px;
+    width: 68px;
     color: #aaa;
-    
+
     padding-right: 10px;
     border-right: 1px solid #EBEBEB;
-  }
-  
-  .profile_item_select,.profile_item_noselect {
+}
+
+.profile_item_select, .profile_item_noselect {
     display: block;
     background: #fff;
     border: 1px solid #e7e7e7;
     border-top: 1px solid #ebebeb;
     border-bottom: 1px solid #c9c9c9;
     border-radius: 4px 0 0 4px;
-    //padding: 15px 20px 15px 15px;
+    padding: 15px 20px 15px 15px;
     padding: 15px 1%;
     margin-bottom: 10px;
     text-decoration: none;
     color: #252525;
     float: left;
-    //width: 90%;
+    width: 90%;
     line-height: 2;
     font-size: medium;
-  }
-  .bb-dest-option .info.add-new {
+}
+
+.bb-dest-option .info.add-new {
     width: 95%;
     padding-right: 3%;
     border-radius: 4px;
-  }
-  
-  
-  
-  
-  .profile_item_select:hover,.profile_item_noselect:hover {
+}
+
+.profile_item_select:hover, .profile_item_noselect:hover {
     color: #da2828;
-  }
-  .profile_item_select:active, .profile_item_select:focus,.profile_item_noselect:active, .profile_item_noselect:focus {
+}
+
+.profile_item_select:active, .profile_item_select:focus, .profile_item_noselect:active, .profile_item_noselect:focus {
     box-shadow: inset 0 0 5px #da2828;
-  }
-  
-  
-  
-  
-  
-  
-  
-  .profile_item {
+}
+
+.profile_item {
     margin-right: 15px;
-  }
-  .profile_item:hover {
+}
+
+.profile_item:hover {
     color: #da2828;
     cursor: pointer;
-  }
-  
-  .profile_item_add_select {
+}
+
+.profile_item_add_select {
     border-radius: 4px 4px 4px 4px;
     padding: 12px;
-  }
+}
 
-  .profile_item_selected {
+.profile_item_selected {
     border-bottom: 3px solid #da2828;
     margin-bottom: 10px;
-  }
+}
 
-  .profile_choose {
+.profile_choose {
     font-size: 20px;
-    font-family: "HelveticaNeue-Light","Helvetica Neue Light","Helvetica Neue",sans-serif;
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", sans-serif;
     padding: 5px 0 15px 5px;
     color: #464646;
-  }
-  .backupbuddyFileTitle {
+}
+
+.backupbuddyFileTitle {
     color: #0084CB;
     font-size: 1.2em;
-  }
-  
-  .profile_settings {
+}
+
+.profile_settings {
     display: block;
     float: left;
     height: 34px;
@@ -119,15 +116,16 @@
     border-right: 1px solid #e7e7e7;
     border-top: 1px solid #ebebeb;
     border-bottom: 1px solid #c9c9c9;
-    
+
     background-position: center;
-    background-repeat:no-repeat;
-    background-color: #fff; 
+    background-repeat: no-repeat;
+    background-color: #fff;
     background-size: 20px 20px;
-  }
-  .profile_settings:hover {
+}
+
+.profile_settings:hover {
     background-color: #a8a8a8;
     background-size: 20px 20px;
     box-shadow: inset 0 0 8px #666;
-  }
+}
   
